- more work on the radio buttons

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -18,13 +18,48 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp">
+                android:layout_marginStart="5dp">
+
+                <RadioGroup
+                    android:id="@+id/radioButtons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <ToggleButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:textOff="@string/one_day"
+                        android:textOn="@string/one_day" />
+
+                    <ToggleButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textOff="@string/one_week"
+                        android:textOn="@string/one_week" />
+
+                    <ToggleButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textOff="@string/one_month"
+                        android:textOn="@string/one_month" />
+
+                    <ToggleButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textOff="@string/one_year"
+                        android:textOn="@string/one_year" />
+
+                </RadioGroup>
+
 
                 <ImageView
                     android:id="@+id/imageViewTemperature"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
+                    android:layout_below="@+id/radioButtons"
                     android:layout_marginTop="10dp"
                     android:contentDescription="@string/temperature"
                     app:srcCompat="@drawable/ic_temperature" />
@@ -32,9 +67,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/radioButtons"
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/imageViewTemperature"
                     android:text="@string/temperature"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp" />
 
                 <com.github.mikephil.charting.charts.LineChart
@@ -43,46 +80,11 @@
                     android:layout_height="200dp"
                     android:layout_below="@+id/imageViewTemperature" />
 
-                <RadioGroup
-                    android:id="@+id/radioButtonsTemperature"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/temperatureGraph"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioButtonTemperatureDay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/one_day" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonTemperatureWeek"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_week" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonTemperatureMonth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_month" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonTemperatureYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_year" />
-
-                </RadioGroup>
-
                 <ImageView
                     android:id="@+id/imageViewLight"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_below="@+id/radioButtonsTemperature"
+                    android:layout_below="@+id/temperatureGraph"
                     android:layout_marginTop="10dp"
                     android:contentDescription="@string/light"
                     app:srcCompat="@drawable/ic_light" />
@@ -90,10 +92,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/radioButtonsTemperature"
+                    android:layout_below="@+id/temperatureGraph"
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/imageViewLight"
                     android:text="@string/light"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp" />
 
                 <com.github.mikephil.charting.charts.LineChart
@@ -102,47 +105,11 @@
                     android:layout_height="200dp"
                     android:layout_below="@+id/imageViewLight" />
 
-
-                <RadioGroup
-                    android:id="@+id/radioButtonsLight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/lightGraph"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioButtonLightDay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/one_day" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonLightWeek"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_week" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonLightMonth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_month" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonLightYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_year" />
-
-                </RadioGroup>
-
                 <ImageView
                     android:id="@+id/imageViewHumidity"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_below="@+id/radioButtonsLight"
+                    android:layout_below="@+id/lightGraph"
                     android:layout_marginTop="10dp"
                     android:contentDescription="@string/humidity"
                     app:srcCompat="@drawable/ic_humidity" />
@@ -150,10 +117,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/radioButtonsLight"
+                    android:layout_below="@+id/lightGraph"
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/imageViewHumidity"
                     android:text="@string/humidity"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp" />
 
                 <com.github.mikephil.charting.charts.LineChart
@@ -162,46 +130,11 @@
                     android:layout_height="200dp"
                     android:layout_below="@+id/imageViewHumidity" />
 
-                <RadioGroup
-                    android:id="@+id/radioButtonsHumidity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/humidityGraph"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioButtonHumidityDay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/one_day" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonHumidityWeek"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_week" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonHumidityMonth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_month" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonHumidityYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_year" />
-
-                </RadioGroup>
-
                 <ImageView
                     android:id="@+id/imageViewNoise"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_below="@+id/radioButtonsHumidity"
+                    android:layout_below="@+id/humidityGraph"
                     android:layout_marginTop="10dp"
                     android:contentDescription="@string/noise"
                     app:srcCompat="@drawable/ic_noise" />
@@ -209,10 +142,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/radioButtonsHumidity"
+                    android:layout_below="@+id/humidityGraph"
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/imageViewNoise"
                     android:text="@string/noise"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp" />
 
                 <com.github.mikephil.charting.charts.LineChart
@@ -220,41 +154,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_below="@+id/imageViewNoise" />
-
-                <RadioGroup
-                    android:id="@+id/radioButtonsNoise"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/noiseGraph"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioButtonNoiseDay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/one_day" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonNoiseWeek"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_week" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonNoiseMonth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_month" />
-
-                    <RadioButton
-                        android:id="@+id/radioButtonNoiseYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/one_year" />
-
-                </RadioGroup>
 
             </RelativeLayout>
 
