--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#e67e22</color>
-    <color name="colorPrimaryDark">#d35400</color>
     <color name="colorAccent">#c0392b</color>
-    <color name="colorTemperature">#FF0000</color>
-    <color name="colorLight">#ffff00</color>
-    <color name="colorHumidity">#00FF00</color>
-    <color name="colorNoise">#0000FF</color>
+    <color name="colorTemperature">#e67e22</color>
+    <color name="colorLight">#c0392b</color>
+    <color name="colorHumidity">#e67e22</color>
+    <color name="colorNoise">#c0392b</color>
 </resources>
