--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,18 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation" />
 
-        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+        <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
-
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            app:itemIconTint="@drawable/bottom_navigation_item_colors"
+            app:itemTextColor="@drawable/bottom_navigation_item_colors"
+            app:labelVisibilityMode="selected"
+            app:menu="@menu/menu_bottom_navigation" />
     </RelativeLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/hamburger_navigation"
