--- a/app/src/main/res/menu/hamburger_navigation.xml
+++ b/app/src/main/res/menu/hamburger_navigation.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_settings_filled"
         android:title="@string/title_settings" />
 
     <item
         android:id="@+id/navigation_about"
-        android:icon="@drawable/ic_about"
+        android:icon="@drawable/ic_about_filled"
         android:title="@string/title_about" />
 
 
