--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorLight">#c0392b</color>
     <color name="colorHumidity">#e67e22</color>
     <color name="colorNoise">#c0392b</color>
+    <color name="colorPrimaryDark">#bc4b00</color>
 </resources>
