--- a/app/src/main/res/drawable/ic_emoji_okay.xml
+++ b/app/src/main/res/drawable/ic_emoji_okay.xml
@@ -8,11 +8,11 @@
         android:pathData="M32,32m-30,0a30,30 0,1 1,60 0a30,30 0,1 1,-60 0" />
     <path
         android:fillColor="#664e27"
-        android:pathData="M20.5,27.6m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0" />
+        android:pathData="M20.5,26.6m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0" />
     <path
         android:fillColor="#664e27"
-        android:pathData="M43.5,27.6m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0" />
+        android:pathData="M43.5,26.6m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0" />
     <path
         android:fillColor="#664e27"
-        android:pathData="M38.9,48H25.1c-1.5,0 -1.5,-4 0,-4h13.7c1.6,0 1.6,4 0.1,4" />
+        android:pathData="M44.6,40.3c-8.1,5.7 -17.1,5.6 -25.2,0 -1,-0.7 -1.8,0.5 -1.2,1.6 2.5,4 7.4,7.7 13.8,7.7s11.3,-3.6 13.8,-7.7c0.6,-1.1 -0.2,-2.3 -1.2,-1.6" />
 </vector>
