--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,7 +7,7 @@
     tools:context=".fragments.HistoryFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeContainer"
+        android:id="@+id/swipeContainerHistory"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
