--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.HomeFragment">
+    android:id="@+id/swipeContainerHome"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    tools:context=".activities.HomeActivity">
 
-    <ImageView
-        android:id="@+id/smiley_image_view"
-        android:layout_width="@android:dimen/thumbnail_height"
-        android:layout_height="@android:dimen/thumbnail_width"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:contentDescription="@string/room_climate"
-        app:srcCompat="@drawable/ic_emoji_dead" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".fragments.HomeFragment">
 
-    <TextView
-        android:id="@+id/info_text_view"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"
-        android:text="The room climate is very bad ☹"
-        android:textAlignment="center"
-        android:textSize="30sp" />
+        <ImageView
+            android:id="@+id/smiley_image_view"
+            android:layout_width="@android:dimen/thumbnail_height"
+            android:layout_height="@android:dimen/thumbnail_width"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:contentDescription="@string/room_climate"
+            app:srcCompat="@drawable/ic_emoji_unknown" />
 
-    <TextView
-        android:id="@+id/info2_text_view"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"
-        android:text="You should open the windows to lower the temperature"
-        android:textAlignment="center"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/info_text_view"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:text="@string/unknown_room_climate"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/info2_text_view"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
